// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/List/Standard Action 1`] = `
<section>
  <h4>
    Standard Size
  </h4>
  

  <ul
    class="fd-list"
    role="list"
  >
    
  
    <li
      class="fd-list__item fd-list__item--action"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        Forward
      </button>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--action"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        Save
      </button>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--action"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        More Options
      </button>
      
  
    </li>
    

  </ul>
  


  <h4>
    Compact size
  </h4>
  

  <ul
    class="fd-list fd-list--compact"
    role="list"
  >
    
  
    <li
      class="fd-list__item fd-list__item--action"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        Forward
      </button>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--action"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        Save
      </button>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--action"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        More Options
      </button>
      
  
    </li>
    

  </ul>
  


  <h4>
    Action List item with other list items 
  </h4>
  

  <ul
    class="fd-list"
    role="list"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
    >
      
      
      <span
        class="fd-list__title"
      >
        List Item 1
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
    >
      
      
      <span
        class="fd-list__title"
      >
        List Item 2
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
    >
      
      
      <span
        class="fd-list__title"
      >
        List Item 3
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--action"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        More Options
      </button>
      
  
    </li>
    

  </ul>
  


  <h4>
    Growing List item with Busy Indicator 
  </h4>
  

  <ul
    class="fd-list"
    role="list"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
    >
      
      
      <span
        class="fd-list__title"
      >
        List Item 1
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
    >
      
      
      <span
        class="fd-list__title"
      >
        List Item 2
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
    >
      
      
      <span
        class="fd-list__title"
      >
        List Item 3
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--action fd-list__item--growing"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        
        
        <div
          aria-hidden="false"
          aria-label="Loading"
          class="fd-busy-indicator--m"
        >
          
            
          <div
            class="fd-busy-indicator--circle-0"
          />
          
            
          <div
            class="fd-busy-indicator--circle-1"
          />
          
            
          <div
            class="fd-busy-indicator--circle-2"
          />
          
        
        </div>
        
        
        <div
          class="fd-list__title-text"
        >
          More Options
        </div>
        
    
      </button>
      
  
    </li>
    

  </ul>
  

</section>
`;

exports[`Storyshots Components/List/Standard Borderless 1`] = `
<ul
  class="fd-list fd-list--no-border"
  role="list"
>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 1
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 2
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 3
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 4
    </span>
    
  
  </li>
  

</ul>
`;

exports[`Storyshots Components/List/Standard Buttons 1`] = `
<ul
  class="fd-list"
  role="list"
>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="-1"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 1
    </span>
    
    
    <button
      class="fd-button fd-button--transparent fd-list__button"
    >
      
        
      <i
        class="sap-icon--edit"
      />
      
    
    </button>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="-1"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 1
    </span>
    
    
    <button
      class="fd-button fd-button--transparent fd-list__button"
    >
      
        
      <i
        class="sap-icon--decline"
      />
      
    
    </button>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="-1"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 2
    </span>
    
    
    <button
      class="fd-button fd-button--transparent fd-list__button"
    >
      
        
      <i
        class="sap-icon--edit"
      />
      
    
    </button>
    
    
    <button
      class="fd-button fd-button--transparent fd-list__button"
    >
      
        
      <i
        class="sap-icon--decline"
      />
      
    
    </button>
    
  
  </li>
  

</ul>
`;

exports[`Storyshots Components/List/Standard Default 1`] = `
<section>
  <h4>
    Standard Size
  </h4>
  

  <ul
    class="fd-list"
    role="list"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 1
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 2
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 3
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 4
      </span>
      
  
    </li>
    

  </ul>
  


  <h4>
    Compact size
  </h4>
  

  <ul
    class="fd-list fd-list--compact"
    role="list"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 1
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 2
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 3
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 4
      </span>
      
  
    </li>
    

  </ul>
  

</section>
`;

exports[`Storyshots Components/List/Standard Footer 1`] = `
<section>
  <ul
    class="fd-list"
    role="list"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 1
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 2
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 3
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 4
      </span>
      
  
    </li>
    

  </ul>
  

  <span
    class="fd-list__footer"
  >
    
  Footer text

  </span>
  

</section>
`;

exports[`Storyshots Components/List/Standard Group 1`] = `
<ul
  class="fd-list"
  role="list"
>
  
  
  <li
    class="fd-list__group-header"
    role="listitem"
  >
    
    
    <span
      class="fd-list__title"
    >
      Group header 1
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 1
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 2
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 3
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__group-header"
    role="listitem"
  >
    
    
    <span
      class="fd-list__title"
    >
      Group header 2
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 4
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 5
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 6
    </span>
    
  
  </li>
  

</ul>
`;

exports[`Storyshots Components/List/Standard Icon 1`] = `
<ul
  class="fd-list"
  role="list"
>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <i
      class="fd-list__icon sap-icon--cart"
      role="presentation"
    />
    
      
    <span
      class="fd-list__title"
    >
      List item 1
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <i
      class="fd-list__icon sap-icon--wrench"
      role="presentation"
    />
    
      
    <span
      class="fd-list__title"
    >
      List item 2
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 3
    </span>
    
      
    <i
      class="fd-list__icon sap-icon--lightbulb"
      role="presentation"
    />
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 4
    </span>
    
      
    <i
      class="fd-list__icon sap-icon--history"
      role="presentation"
    />
    
  
  </li>
  

</ul>
`;

exports[`Storyshots Components/List/Standard Inactive 1`] = `
<ul
  class="fd-list fd-list--navigation"
  role="list"
>
  
  
  <li
    class="fd-list__item fd-list__item--link fd-list__item--inactive"
    role="listitem"
    tabindex="0"
  >
    
    
    <a
      class="fd-list__link"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 1 - Inactive
      </span>
      
    
    </a>
    
  
  </li>
  
  
  <li
    class="fd-list__item fd-list__item--link"
    role="listitem"
    tabindex="0"
  >
    
    
    <a
      class="fd-list__link"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 2
      </span>
      
    
    </a>
    
  
  </li>
  
  
  <li
    class="fd-list__item fd-list__item--link"
    role="listitem"
    tabindex="0"
  >
    
    
    <a
      class="fd-list__link"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 3
      </span>
      
    
    </a>
    
  
  </li>
  
  
  <li
    class="fd-list__item fd-list__item--link"
    role="listitem"
    tabindex="0"
  >
    
    
    <a
      class="fd-list__link"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 4
      </span>
      
    
    </a>
    
  
  </li>
  

</ul>
`;

exports[`Storyshots Components/List/Standard Infinite scroll 1`] = `
<ul
  class="fd-list fd-list__infinite-scroll fddocs-list-height"
  role="list"
>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 1
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 2
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 3
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 4
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 5
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 6
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 7
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 8
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 9
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 10
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 11
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
    
    <span
      class="fd-list__title"
    >
      List item 12
    </span>
    
  
  </li>
  

</ul>
`;

exports[`Storyshots Components/List/Standard Interactive 1`] = `
<section>
  <h4>
    Interactive Items
  </h4>
  

  <ul
    class="fd-list"
    role="list"
  >
    
  
    <li
      class="fd-list__item fd-list__item--interractive"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 1
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--interractive"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 2
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--interractive"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 3
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--interractive"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 4
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--interractive is-selected"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 5 - with .is-selected
      </span>
      
  
    </li>
    

  </ul>
  

</section>
`;

exports[`Storyshots Components/List/Standard Item Counter 1`] = `
<ul
  class="fd-list"
  role="list"
>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 1
    </span>
    
      
    <span
      class="fd-list__item-counter"
    >
      12345
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 2
    </span>
    
      
    <span
      class="fd-list__item-counter"
    >
      12345
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <i
      class="fd-list__icon sap-icon--lightbulb"
      role="presentation"
    />
    
      
    <span
      class="fd-list__title"
    >
      List item 3
    </span>
    
      
    <span
      class="fd-list__item-counter"
    >
      12345
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <i
      class="fd-list__icon sap-icon--cart"
      role="presentation"
    />
    
      
    <span
      class="fd-list__title"
    >
      List item 4
    </span>
    
      
    <span
      class="fd-list__item-counter"
    >
      12345
    </span>
    
  
  </li>
  

</ul>
`;

exports[`Storyshots Components/List/Standard Navigation 1`] = `
<ul
  class="fd-list fd-list--navigation"
  role="list"
>
  
  
  <li
    class="fd-list__item fd-list__item--link"
    role="listitem"
    tabindex="-1"
  >
    
      
    <a
      class="fd-list__link"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__title"
      >
        List item 1
      </span>
      
      
    </a>
    
  
  </li>
  
  
  <li
    class="fd-list__item fd-list__item--link"
    role="listitem"
    tabindex="-1"
  >
    
      
    <a
      class="fd-list__link"
      tabindex="0"
    >
      
        
      <i
        class="fd-list__icon sap-icon--history"
        role="presentation"
      />
      
        
      <span
        class="fd-list__title"
      >
        List item 2
      </span>
      
      
    </a>
    
  
  </li>
  
  
  <li
    class="fd-list__item fd-list__item--link"
    role="listitem"
    tabindex="-1"
  >
    
      
    <a
      class="fd-list__link"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__title"
      >
        List item 3
      </span>
      
        
      <i
        class="fd-list__icon sap-icon--map"
        role="presentation"
      />
      
      
    </a>
    
  
  </li>
  

</ul>
`;

exports[`Storyshots Components/List/Standard Navigation indicators 1`] = `
<ul
  class="fd-list fd-list--navigation fd-list--navigation-indication"
  role="list"
>
  
  
  <li
    class="fd-list__item fd-list__item--link"
    role="listitem"
    tabindex="-1"
  >
    
      
    <a
      class="fd-list__link fd-list__link--navigation-indicator"
      href="#"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__title"
      >
        List item 1
      </span>
      
      
    </a>
    
  
  </li>
  
  
  <li
    class="fd-list__item fd-list__item--link"
    role="listitem"
    tabindex="-1"
  >
    
      
    <a
      class="fd-list__link fd-list__link--navigation-indicator is-selected"
      href="#"
      tabindex="0"
    >
      
        
      <i
        class="fd-list__icon sap-icon--history"
        role="presentation"
      />
      
        
      <span
        class="fd-list__title"
      >
        List item 2
      </span>
      
      
    </a>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
        
    <i
      class="fd-list__icon sap-icon--history"
      role="presentation"
    />
    
        
    <span
      class="fd-list__title"
    >
      List item 3
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
        
    <span
      class="fd-list__title"
    >
      List item 4
    </span>
    
        
    <i
      class="fd-list__icon sap-icon--map"
      role="presentation"
    />
    
  
  </li>
  
  
  <li
    class="fd-list__item fd-list__item--link"
    role="listitem"
    tabindex="-1"
  >
    
      
    <a
      class="fd-list__link fd-list__link--navigation-indicator is-navigated"
      href="#"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__title"
      >
        List item 5
      </span>
      
        
      <i
        class="fd-list__icon sap-icon--map"
        role="presentation"
      />
      
      
    </a>
    
  
  </li>
  

</ul>
`;

exports[`Storyshots Components/List/Standard Secondary data 1`] = `
<ul
  class="fd-list"
  role="list"
>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 1
    </span>
    
      
    <span
      class="fd-list__secondary"
    >
      A1
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 2
    </span>
    
      
    <span
      class="fd-list__secondary"
    >
      A2
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 3
    </span>
    
      
    <span
      class="fd-list__secondary"
    >
      A3
    </span>
    
  
  </li>
  
  
  <li
    class="fd-list__item"
    role="listitem"
    tabindex="0"
  >
    
      
    <span
      class="fd-list__title"
    >
      List item 4
    </span>
    
      
    <span
      class="fd-list__secondary"
    >
      A4
    </span>
    
  
  </li>
  

</ul>
`;

exports[`Storyshots Components/List/Standard Selection 1`] = `
<section>
  <h4
    id="XezW11"
  >
    Standard Size
  </h4>
  

  <ul
    aria-labelledby="XezW11"
    class="fd-list fd-list--selection"
    role="listbox"
  >
    
  
    <li
      class="fd-list__item"
      role="option"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          aria-labelledby="Az0bg1"
          class="fd-checkbox"
          id="Ai4ez1"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label"
          for="Ai4ez1"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="fd-list__title"
        id="Az0bg1"
      >
        List item 1
      </span>
      
  
    </li>
    
  
    <li
      aria-selected="true"
      class="fd-list__item is-selected"
      role="option"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          aria-labelledby="Az0bg2"
          checked=""
          class="fd-checkbox"
          id="Ai4ez2"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label"
          for="Ai4ez2"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="fd-list__title"
        id="Az0bg2"
      >
        List item 2
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="option"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          aria-labelledby="Az0bg3"
          class="fd-checkbox"
          id="Ai4ez3"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label"
          for="Ai4ez3"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="fd-list__title"
        id="Az0bg3"
      >
        List item 3
      </span>
      
  
    </li>
    

  </ul>
  


  <h4
    id="XezW12"
  >
    Compact size
  </h4>
  

  <ul
    aria-labelledby="XezW12"
    class="fd-list fd-list--selection fd-list--compact fd-list--no-border"
    role="listbox"
  >
    
  
    <li
      class="fd-list__item"
      role="option"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          aria-labelledby="Az0bg4"
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez4"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez4"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="fd-list__title"
        id="Az0bg4"
      >
        List item 1
      </span>
      
  
    </li>
    
  
    <li
      aria-selected="true"
      class="fd-list__item is-selected"
      role="option"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          aria-labelledby="Az0bg5"
          checked=""
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez5"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez5"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="fd-list__title"
        id="Az0bg5"
      >
        List item 2
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="option"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          aria-labelledby="Az0bg6"
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez6"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez6"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="fd-list__title"
        id="Az0bg6"
      >
        List item 3
      </span>
      
  
    </li>
    

  </ul>
  

</section>
`;

exports[`Storyshots Components/List/Standard Unread 1`] = `
<section>
  <h4>
    Unread Options
  </h4>
  

  <ul
    class="fd-list"
    role="list"
  >
    
  
    <li
      class="fd-list__item fd-list__item--unread"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 1 Unread
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--unread"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 2 Unread
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 3 Read
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 4 Read
      </span>
      
  
    </li>
    

  </ul>
  

</section>
`;
